--- a/RapApp/Storyboard/Base.lproj/Main.storyboard
+++ b/RapApp/Storyboard/Base.lproj/Main.storyboard
@@ -183,6 +183,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
