--- a/RapApp/Storyboard/Base.lproj/Home.storyboard
+++ b/RapApp/Storyboard/Base.lproj/Home.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Random Word" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aL4-r9-fJY">
-                                <rect key="frame" x="88.333333333333329" y="70" width="237.33333333333337" height="50"/>
+                                <rect key="frame" x="88.000000000000014" y="70" width="237.33333333333337" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="JmF-Z6-uVB"/>
                                 </constraints>
@@ -183,20 +183,11 @@
                                     <action selector="playButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XCr-9h-oWQ"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6Z-rD-Adz">
-                                <rect key="frame" x="372" y="20" width="42" height="41"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Xw-sh-Moz">
+                                <rect key="frame" x="14" y="696" width="344" height="31"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="41" id="4Og-hL-s6I"/>
-                                    <constraint firstAttribute="width" constant="42" id="zS5-6x-Bm2"/>
+                                    <constraint firstAttribute="width" constant="344" id="65q-3C-MuL"/>
                                 </constraints>
-                                <state key="normal" title="Button" image="if_FEZ-04_196912"/>
-                                <connections>
-                                    <segue destination="wbi-bm-gxD" kind="show" identifier="ShowSettings" id="pJt-OK-sBl"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Xw-sh-Moz">
-                                <rect key="frame" x="70" y="463" width="275" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -208,6 +199,17 @@
                                     <constraint firstAttribute="height" constant="21" id="axH-IR-DU7"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6Z-rD-Adz">
+                                <rect key="frame" x="352" y="20" width="42" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="4Og-hL-s6I"/>
+                                    <constraint firstAttribute="width" constant="42" id="zS5-6x-Bm2"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="if_083_Music_183211"/>
+                                <connections>
+                                    <segue destination="wbi-bm-gxD" kind="show" identifier="ShowSettings" id="pJt-OK-sBl"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -218,12 +220,15 @@
                             <constraint firstItem="O6Z-rD-Adz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="HwZ-LD-EGe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rsO-rO-d47" secondAttribute="trailing" id="QQT-JR-H9v"/>
                             <constraint firstItem="EA1-gu-ywy" firstAttribute="top" secondItem="rsO-rO-d47" secondAttribute="bottom" id="Rlt-3D-lGn"/>
+                            <constraint firstItem="8Xw-sh-Moz" firstAttribute="top" secondItem="rsO-rO-d47" secondAttribute="bottom" constant="8" symbolic="YES" id="X0c-db-V7g"/>
                             <constraint firstAttribute="trailing" secondItem="TI2-lC-4KR" secondAttribute="trailing" id="a8b-Jg-auh"/>
                             <constraint firstItem="BvD-bC-H1s" firstAttribute="top" secondItem="aL4-r9-fJY" secondAttribute="bottom" constant="50" id="beh-6I-2pK"/>
                             <constraint firstItem="BvD-bC-H1s" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="g69-Q8-zy1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BvD-bC-H1s" secondAttribute="trailing" constant="50" id="gsM-b2-wji"/>
+                            <constraint firstItem="8Xw-sh-Moz" firstAttribute="centerY" secondItem="EA1-gu-ywy" secondAttribute="centerY" id="h4Y-ce-G1b"/>
                             <constraint firstItem="DOh-iM-9sw" firstAttribute="top" secondItem="BvD-bC-H1s" secondAttribute="bottom" constant="90" id="i90-Jj-UQH"/>
                             <constraint firstItem="DOh-iM-9sw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jYF-NW-qjB"/>
+                            <constraint firstItem="EA1-gu-ywy" firstAttribute="leading" secondItem="8Xw-sh-Moz" secondAttribute="trailing" constant="8" symbolic="YES" id="kFp-wW-GyW"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EA1-gu-ywy" secondAttribute="trailing" id="kq3-JE-mhF"/>
                             <constraint firstItem="aL4-r9-fJY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="lMt-Mb-ZhQ"/>
                             <constraint firstItem="TI2-lC-4KR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="n9Q-Vu-pp3"/>
@@ -256,7 +261,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+            <point key="canvasLocation" x="1075.3623188405797" y="132.88043478260872"/>
         </scene>
         <!--Settings-->
         <scene sceneID="SGD-Pd-P93">
@@ -268,7 +273,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="if_FEZ-04_196912" width="512" height="512"/>
+        <image name="if_083_Music_183211" width="256" height="256"/>
         <image name="if_button_play_red_14778" width="48" height="48"/>
     </resources>
 </document>
