Fixing Pause Button

--- a/RapApp/Storyboard/Base.lproj/Home.storyboard
+++ b/RapApp/Storyboard/Base.lproj/Home.storyboard
@@ -268,5 +268,19 @@
             </objects>
             <point key="canvasLocation" x="417" y="141"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Blc-WQ-mym">
+            <objects>
+                <viewController id="Fzr-xs-YbU" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2P7-gM-mZx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="jly-AM-V5v"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8QX-ix-nrl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
 </document>
