Just a few more design things

--- a/RapApp/Storyboard/RapApp/Storyboard/Base.lproj/Settings.storyboard
+++ b/RapApp/Storyboard/RapApp/Storyboard/Base.lproj/Settings.storyboard
@@ -39,13 +39,13 @@
                                                     <rect key="frame" x="111" y="11" width="121" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="textColor" red="0.71764705882352942" green="0.72156862745098038" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" red="0.58431372549019611" green="0.027450980392156862" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.58431372549019611" green="0.027450980392156862" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.43529411764705883" green="0.13333333333333333" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="musicLabel" destination="mtP-Zd-LJy" id="djE-wL-DYm"/>
                                             <segue destination="6ci-Xf-fnU" kind="unwind" unwindAction="unwindWithSegueToHome:" id="s8n-Cq-iMD"/>
